--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
     -->  <link href="css/style.css" rel="stylesheet">
 
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/index.js"></script>
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="cordova.js"></script>
