--- a/www/load.html
+++ b/www/load.html
@@ -1,5 +1,5 @@
 <div class="container">
   <div class="col col-10 window">
-  <iframe width="314" height="528" scrolling="yes" style="margin:10px;" src="http://localhost:8100/#/help"></iframe>
+  <iframe width="314" height="528" scrolling="yes" style="margin:10px;" src="https://fb-fan.herokuapp.com/"></iframe>
   </div>
 </div>
