--- a/www/create-ids.html
+++ b/www/create-ids.html
@@ -7,9 +7,6 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
 
-
-
-
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->  <link href="css/style.css" rel="stylesheet">
@@ -17,12 +14,26 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="js/index.js"></script>
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-  
+    <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="cordova.js"></script>
     <script src="https://rawgit.com/dwmkerr/angular-modal-service/master/dst/angular-modal-service.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.1/angular-route.js"></script>
   </head>
-  <body ng-app="starter">
-      <ion-nav-view></ion-nav-view>
+  <body ng-app="starter" ng-controller="brands">
+      <ion-content>
+        <h1>{{title}}</h1>
+        <div ng-repeat="brand in brands" ng-init="init()">
+          <div class="brandslist">
+            <a class="item-thumbnail-left">
+              <h4 class="color1">#{{$index + 1}}. {{brand.name}}</h4>
+              <h5 class="color1" ng-click='create(brand.id)'>Id: {{brand.id}}</h5>
+              <h6 class="color1">Likes: {{brand.likes}}</h6>
+              <h6 class="color1">Website: {{brand.website}}</h6>
+              <h6 class="color1">Emails: {{brand.emails}}</h6>
+              <h6 class="color1">Emails: {{brand.category}}</h6>
+              <hr>
+            </a>
+          </div>
+        </div>
+      </ion-content>
   </body>
 </html>
