--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
 
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/email.js"></script>
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <script src="https://rawgit.com/dwmkerr/angular-modal-service/master/dst/angular-modal-service.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.1/angular-route.js"></script>
