--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>Start Your App</title>
+    <meta http-equiv="X-Frame-Options" content="allow">
+
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
 
